@startuml
interface InputHandlerInterface {
    + handleInput(inputSignal: string): void
}

class Node {
    # nodeId: int
    # floorNumber: int
    + getNodeId(): int
    + getFloorNumber(): int
}

class FloorNode {
    - upRequested: bool
    - downRequested: bool
    + handleInput(inputSignal: string): void
    + isUpRequested(): bool
}

class ElevatorCar {
    - doorState: string
    - motionState: string
    + handleInput(inputSignal: string): void
    + getDoorState(): string
}

class DistanceSensor {
    - distanceMm: float
    + updateDistance(distance: float): void
    + getDistance(): float
}

Node <|-- FloorNode
Node <|-- ElevatorCar
Node <|-- DistanceSensor

InputHandlerInterface <|.. FloorNode
InputHandlerInterface <|.. ElevatorCar
@enduml